content/devops/k8s/labs/network/04.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-app
  labels:
    kubernetes.io/service-name: external-app
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 55555
endpoints:
  - addresses:
      - "192.168.59.174"
---
apiVersion: v1
kind: Service
metadata:
  name: external-app
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 55555
      targetPort: 55555
      nodePort: 30007

---
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  labels:
    name: busybox
spec:
  containers:
  - image: busybox:1.28
    command:
      - sleep
      - "3600"
    name: busybox
