content/devops/k8s/labs/network/07.yaml
---
# kubectl apply -f https://projectcontour.io/quickstart/contour-gateway-provisioner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: header-based-routing
spec:
  virtualhost:
    fqdn: "www.ufc.int"
  routes:
    - conditions:
      - header:
          name: "whatname"
          exact: "apache"
      services:
        - name: apache-service
          port: 80
    - conditions:
      - header:
          name: "whatname"
          exact: "nginx"
      services:
        - name: nginx-service
          port: 80
# curl -H "whatname: apache" www.ufc.int
