content/devops/k8s/labs/network/08.yaml
---
# minikube addons enable ingress
# helm repo add traefik https://helm.traefik.io/traefik
# helm repo update
# kubectl apply -k "github.com/kubernetes-sigs/gateway-api/config/crd?ref=v0.4.0"
# helm install --set experimental.kubernetesGateway.enabled=true traefik traefik/traefik 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: default
spec:
  gatewayClassName: gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
          - kind: IngressRoute


---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: header-based-routing
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.ufc.int`) && Headers(`whatname`, `apache`)
      kind: Rule
      services:
        - name: apache-service
          namespace: default
          port: 80
    - match: Host(`www.ufc.int`) && Headers(`whatname`, `nginx`)
      kind: Rule
      services:
        - name: nginx-service
          namespace: default
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: header-based-routing
spec:
  hostnames:
    - "www.ufc.local"
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - matches:
        - headers:
            - name: whatname
              value: apache
      backendRefs:
        - name: apache-service
          port: 80
    - matches:
        - headers:
            - name: whatname
              value: nginx
      backendRefs:
        - name: nginx-service
          port: 80
