content/devops/k8s/labs/network/02.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      type: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
            - key: namespace
              operator: In
              values: ["staging"]
        - podSelector:
            matchLabels:
              role: frontend
        - ipBlock:
            cidr: 172.17.0.0/16
            except:
              - 172.17.1.0/24
      ports:
        - protocol: TCP
          port: 80
          endPort: 80
  egress:
    - to:
      - ipBlock:
          cidr: 10.244.0.0/16
      ports:
        - protocol: TCP
          port: 80
